dfir_rs/tests/compile-fail-stable/surface_loop_missing_semi.rs
../compile-fail/surface_loop_missing_semi.rs